# BHT-meter-hub

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
bhtmeter/: __main__.py
bhtmeter/sensor/: __init__.py  ble_sensor.py  switchbot_plug.py  switchbot_th.py
bhtmeter/utils/: merge_toml.py  snake_case.py
examples/: ambient_keys.toml  config.toml
src/bhtmeter/: __main__.py  config.py
src/bhtmeter/datastore/: __init__.py  ambient_store.py
src/bhtmeter/sensor/: __init__.py  ble_sensor.py  bosh_bme280.py  switchbot_plug.py  switchbot_th.py
src/bhtmeter/utils/: merge_toml.py  snake_case.py
tests/: test_merge_toml.py  test_snake_case.py
