[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-bhtmeter"
version = "0.1.0"
description = "Baro-, Hygro- and Thermo-meter measurement hub"
readme = "README.md"
authors = [{ name = "Tadashi G. Takaoka", email = "tadashi.g.takaoka@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["barometer", "hygrometer", "thermometer", "bluetooth", "i2c"]
dependencies = [
    'bluepy',
    'pimoroni-bme280',
    'smbus2',
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9.2"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "build",
    "deepdiff",
    "pip-tools",
    "pytest",
    "setuptools",
    "twine",
]

[project.urls]
Homepage = "https://github.com/tgtakaoka/python-bhtmeter"

[project.scripts]
bhtmeter = "bhtmeter.__main__:main"

[tool.black]
line-length = 99

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.setuptools.packages.find]
where = ["src"]
include = ["bhtmeter*", "ambient"]
exclude = ["ambient.examples"]
