[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-bhtmeter"
version = "0.3.0"
description = "Baro-, Hygro- and Thermo-meter measurement hub"
readme = "README.md"
authors = [{ name = "Tadashi G. Takaoka", email = "tadashi.g.takaoka@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["barometer", "hygrometer", "thermometer", "bluetooth", "i2c"]
dependencies = [
    'bleak',
    'pimoroni-bme280',
    'smbus2',
    'tomli; python_version < "3.11"',
    'ambient@git+https://github.com/TakehikoShimojima/ambient-python-lib.git'
]
requires-python = ">=3.9.2"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "flake8",
    "isort",
    "pip>=22",
    "pip-tools",
    "pyproject-flake8",
    "setuptools>=65",
]
dist = [
    "build",
    "twine",
]
test = [
    "deepdiff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/tgtakaoka/python-bhtmeter"

[project.scripts]
bhtmeter = "bhtmeter.__main__:main"

[tool.black]
line-length = 99

[tool.bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.flake8]
max-line-length = 99
max-complexity = 10
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bhtmeter*"]
